# c_array_support

./: ALLOW_ZERO_SIZE_ARRAY.hpp  CONTRIBUTING.md  array_assign.hpp  array_compare.hpp  c_array_assign.hpp  c_array_compare.hpp  c_array_support.hpp  documentation.md  meson.build  meson_options.txt  namespace.hpp  readme.md  util_traits.hpp
.github/workflows/: ci.yml
tests/: meson.build  test_array_assign.cpp  test_array_assign.hpp  test_array_compare.cpp  test_array_compare.hpp  test_array_support.cpp  test_array_support.hpp  test_c_array_assign.cpp  test_c_array_assign.hpp  test_c_array_compare.cpp  test_c_array_compare.hpp  test_c_array_support.cpp  test_c_array_support.hpp  test_zero_size_array.cpp
